-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-07-09T23:46:19.777Z

CREATE TABLE "User" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "phone_number" INT,
  "email" "VARCHAR(100)",
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "AuthProvider" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "phone_number" INT,
  "email" "VARCHAR(100)",
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "AuthToken" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" BIGINT,
  "auth_provider_id" BIGINT,
  "token" "VARCHAR(500)",
  "token_type" "VARCHAR(50)",
  "expires_at" TIMESTAMP,
  "is_revoked" BOOLEAN,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "Staff" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" BIGINT,
  "staff_number" "VARCHAR(50)",
  "first_name" "VARCHAR(100)",
  "last_name" "VARCHAR(100)",
  "role" "VARCHAR(50)",
  "department" "VARCHAR(100)",
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "Borrower" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" BIGINT,
  "borrower_number" "VARCHAR(50)",
  "first_name" "VARCHAR(100)",
  "last_name" "VARCHAR(100)",
  "date_of_birth" DATE,
  "national_id" "VARCHAR(50)",
  "phone_number" INT,
  "email" "VARCHAR(100)",
  "physical_address" TEXT,
  "employment_status" "VARCHAR(50)",
  "employer" "VARCHAR(100)",
  "monthly_income" "DECIMAL(10,2)",
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "Loan" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "borrower_id" BIGINT,
  "loan_number" "VARCHAR(50)",
  "amount" "DECIMAL(15,2)",
  "interest_rate" "DECIMAL(5,2)",
  "term_months" INT,
  "purpose" TEXT,
  "applied_date" DATE,
  "approved_date" DATE,
  "disbursement_date" DATE,
  "created_by" BIGINT,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "LoanApplication" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "loan_id" BIGINT,
  "borrower_id" BIGINT,
  "application_date" DATE,
  "application_status" "VARCHAR(50)",
  "reviewed_by" BIGINT,
  "review_date" DATE,
  "review_notes" TEXT,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "LoanStatus" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "loan_id" BIGINT,
  "status_code" "VARCHAR(50)",
  "status_name" "VARCHAR(100)",
  "status_description" TEXT,
  "is_active" BOOLEAN,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "LoanHistory" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "loan_id" BIGINT,
  "status_id" BIGINT,
  "changed_by" BIGINT,
  "old_status" "VARCHAR(50)",
  "new_status" "VARCHAR(50)",
  "change_date" TIMESTAMP,
  "change_notes" TEXT,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "LoanBorrower" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "loan_id" BIGINT,
  "borrower_id" BIGINT,
  "is_primary" BOOLEAN,
  "relationship_type" "VARCHAR(50)",
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP,
  "deleted_by" BIGINT
);

CREATE TABLE "Role" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP
);

CREATE TABLE "Permission" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP
);

CREATE TABLE "RoleUser" (
  "permission_id" BIGINT,
  "user_id" BIGINT,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP
);

CREATE TABLE "PermissionRole" (
  "permission_id" BIGINT,
  "role_id" BIGINT,
  "created_at" TIMESTAMP,
  "updated_at" TIMESTAMP,
  "deleted_at" TIMESTAMP
);

ALTER TABLE "AuthToken" ADD FOREIGN KEY ("user_id") REFERENCES "User" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AuthToken" ADD FOREIGN KEY ("auth_provider_id") REFERENCES "AuthProvider" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Staff" ADD FOREIGN KEY ("user_id") REFERENCES "User" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Borrower" ADD FOREIGN KEY ("user_id") REFERENCES "User" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Loan" ADD FOREIGN KEY ("borrower_id") REFERENCES "Borrower" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Loan" ADD FOREIGN KEY ("created_by") REFERENCES "Staff" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanApplication" ADD FOREIGN KEY ("loan_id") REFERENCES "Loan" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanApplication" ADD FOREIGN KEY ("borrower_id") REFERENCES "Borrower" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanApplication" ADD FOREIGN KEY ("reviewed_by") REFERENCES "Staff" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanStatus" ADD FOREIGN KEY ("loan_id") REFERENCES "Loan" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanHistory" ADD FOREIGN KEY ("loan_id") REFERENCES "Loan" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanHistory" ADD FOREIGN KEY ("status_id") REFERENCES "LoanStatus" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanHistory" ADD FOREIGN KEY ("changed_by") REFERENCES "Staff" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanBorrower" ADD FOREIGN KEY ("loan_id") REFERENCES "Loan" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "LoanBorrower" ADD FOREIGN KEY ("borrower_id") REFERENCES "Borrower" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "RoleUser" ADD FOREIGN KEY ("permission_id") REFERENCES "Permission" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "RoleUser" ADD FOREIGN KEY ("user_id") REFERENCES "User" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PermissionRole" ADD FOREIGN KEY ("permission_id") REFERENCES "Permission" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PermissionRole" ADD FOREIGN KEY ("role_id") REFERENCES "Permission" ("id") DEFERRABLE INITIALLY IMMEDIATE;
