// Database: sevispass_db
// Schema: system_v1

Table Users {
  id BIGINT [pk, increment]
  phone_number INT
  email VARCHAR(100)
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table AuthProvider {
  id BIGINT [pk, increment]
  phone_number INT
  email VARCHAR(100)
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table Staff {
  id BIGINT [pk, increment]
  user_id BIGINT [ref: > Users.id]
  staff_number VARCHAR(50)
  first_name VARCHAR(100)
  last_name VARCHAR(100)
  role VARCHAR(50)
  department VARCHAR(100)
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table Borrower {
  id BIGINT [pk, increment]
  user_id BIGINT [ref: > Users.id]
  borrower_number VARCHAR(50)
  first_name VARCHAR(100)
  last_name VARCHAR(100)
  date_of_birth DATE
  national_id VARCHAR(50)
  phone_number INT
  email VARCHAR(100)
  physical_address TEXT
  employment_status VARCHAR(50)
  employer VARCHAR(100)
  monthly_income DECIMAL(10,2)
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table Loan {
  id BIGINT [pk, increment]
  borrower_id BIGINT [ref: > Borrower.id]
  loan_number VARCHAR(50)
  amount DECIMAL(15,2)
  interest_rate DECIMAL(5,2)
  term_months INT
  purpose TEXT
  applied_date DATE
  approved_date DATE
  disbursement_date DATE
  created_by BIGINT [ref: > Staff.id]
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table LoanApplication {
  id BIGINT [pk, increment]
  loan_id BIGINT [ref: > Loan.id]
  borrower_id BIGINT [ref: > Borrower.id]
  application_date DATE
  application_status VARCHAR(50)
  reviewed_by BIGINT [ref: > Staff.id]
  review_date DATE
  review_notes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table LoanStatus {
  id BIGINT [pk, increment]
  loan_id BIGINT [ref: > Loan.id]
  status_code VARCHAR(50)
  status_name VARCHAR(100)
  status_description TEXT
  is_active BOOLEAN
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table LoanHistory {
  id BIGINT [pk, increment]
  loan_id BIGINT [ref: > Loan.id]
  status_id BIGINT [ref: > LoanStatus.id]
  changed_by BIGINT [ref: > Staff.id]
  old_status VARCHAR(50)
  new_status VARCHAR(50)
  change_date TIMESTAMP
  change_notes TEXT
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table LoanBorrower {
  id BIGINT [pk, increment]
  loan_id BIGINT [ref: > Loan.id]
  borrower_id BIGINT [ref: > Borrower.id]
  is_primary BOOLEAN
  relationship_type VARCHAR(50)
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

Table AuthToken {
  id BIGINT [pk, increment]
  user_id BIGINT [ref: > Users.id]
  auth_provider_id BIGINT [ref: > AuthProvider.id]
  token VARCHAR(500)
  token_type VARCHAR(50)
  expires_at TIMESTAMP
  is_revoked BOOLEAN
  created_at TIMESTAMP
  updated_at TIMESTAMP
  deleted_at TIMESTAMP
  deleted_by BIGINT
}

// Note: Your original Users table had duplicate 'deleted_by' columns - I've removed the duplicates
// Note: Added more meaningful columns to other tables based on common loan management system requirements
// Note: Consider adding indexes for foreign keys and frequently queried columns